see if this fixes overflow issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,9 +14,13 @@
 
 }
 
+html,
 body {
-  overflow-x: hidden;
+  overflow-x: clip;
+  overscroll-behavior-x: none;
+  /* Prevent horizontal scrolling */
+  /* overflow-y: auto; */
+  /* Ensure vertical scrolling when necessary */
+  height: auto;
+  width: 100%;
 }
-
-
-
